fixes a few z-index issues

--- a/storefront/src/components/NavBar/navbar.scss
+++ b/storefront/src/components/NavBar/navbar.scss
@@ -6,6 +6,9 @@
    ============================================================== */
 
 #header {
+    position: relative;
+    z-index: 100;
+
     .navbar-collapse {
         flex-grow: 0;
         flex-wrap: wrap;
